Changes with melon 2.5.4                                          14 Nov 2022
    *) Fixed bug of error component
    *) Added functions in C and Melang to send message from c to script
    *) Updated docs

Changes with melon 2.5.3                                          03 Nov 2022
    *) Optimize melang performance
    *) Update import function of melang
    *) update logo
    *) Updated naming conventions of hash, rbtree, queue, stack and fork components
    *) Optimize argument of iterate function in rbtree
    *) Added macros for getting user data from fheap and rbtree nodes
    *) Updated docs
    *) Added error component

Changes with melon 2.5.2                                          29 Sep 2022
    *) Upgraded iothread
    *) Optimized lang lock
    *) Updated functions in lang
    *) Fixed event bugs
    *) Fixed memory pool bug in lang

Changes with melon 2.5.1                                          23 Sep 2022
    *) Fixed event bugs
    *) Optimized event
    *) Updated functions of lang
    *) Fixed bugs of lang
    *) Added eval as an internal function of melang

Changes with melon 2.5.0                                          16 Sep 2022
    *) Updated rbtree functions
    *) Optimized iothread
    *) Upgraded event to support multi-thread
    *) Fixed select error on Windows
    *) Upgraded Melang to enable tasks to execute across threads
    *) Fixed event break
    *) Updated docs

Changes with melon 2.4.1                                          04 Sep 2022
    *) Updated configure shell
    *) Added iothread component
    *) Updated docs

Changes with melon 2.4.0                                          28 Aug 2022
    *) Optimized memory pool to support hierarchical pool
    *) Optimized configuration processing
    *) Updated fib-heap to support memory pool
    *) Updated spinlock
    *) Optimized core library, moved melang library to repository Melang
    *) Fixed dlopen memory bug in melang import function